// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StablecoinMasterContract on MintFeesMessage should increase amount and send internaltransfer to jetton 1`] = `
[
  {
    "$seq": 4,
    "events": [
      {
        "$type": "received",
        "message": {
          "body": {
            "cell": "x{9D42541D800784F79BB9BDDE39E2B05A2820A591FBCD92F3ACC083685CD65E37ED00489A4B22C9_}",
            "type": "cell",
          },
          "bounce": true,
          "from": "kQBhDJZIy0_RS_IdyGG5GxdsC8eWb15DS9b3IL2p2-b0cUi8",
          "to": "kQCvEGmk27vea3FYBdf6TiCp3U30vtq0p62qJHO0fGPgxIkv",
          "type": "internal",
          "value": 1000000000n,
        },
      },
      {
        "$type": "processed",
        "gasUsed": 16187n,
      },
      {
        "$type": "sent",
        "messages": [
          {
            "body": {
              "cell": "x{178D451900000000000000001648015E20D349B777BCD6E2B00BAFF49C4153BA9BE97DB5694F5B5448E768F8C7C189000F09EF37737BBC73C560B450414B23F79B25E7598106D0B9ACBC6FDA0091349642_}",
              "type": "cell",
            },
            "bounce": false,
            "from": "kQCvEGmk27vea3FYBdf6TiCp3U30vtq0p62qJHO0fGPgxIkv",
            "to": "kQDIdzjMufp9FBvkEN02I0Kv1I9eMfkaQCDY7zHgfQ-Mij71",
            "type": "internal",
            "value": 968349000n,
          },
        ],
      },
    ],
  },
]
`;

exports[`StablecoinMasterContract on mintMessage should increase totalsupply and transfer amount 1`] = `
[
  {
    "$seq": 1,
    "events": [
      {
        "$type": "received",
        "message": {
          "body": {
            "cell": "x{903559B2800784F79BB9BDDE39E2B05A2820A591FBCD92F3ACC083685CD65E37ED00489A4B22C9_}",
            "type": "cell",
          },
          "bounce": true,
          "from": "kQBqJ1A2wQ5MkOBlhdTr7ML850tmbmDecFDAEvNUwHvm0sGh",
          "to": "kQCvEGmk27vea3FYBdf6TiCp3U30vtq0p62qJHO0fGPgxIkv",
          "type": "internal",
          "value": 1000000000n,
        },
      },
      {
        "$type": "processed",
        "gasUsed": 22427n,
      },
      {
        "$type": "sent",
        "messages": [
          {
            "body": {
              "cell": "x{178D451900000000000000001648015E20D349B777BCD6E2B00BAFF49C4153BA9BE97DB5694F5B5448E768F8C7C189000F09EF37737BBC73C560B450414B23F79B25E7598106D0B9ACBC6FDA0091349642_}",
              "type": "cell",
            },
            "bounce": false,
            "from": "kQCvEGmk27vea3FYBdf6TiCp3U30vtq0p62qJHO0fGPgxIkv",
            "to": "kQDIdzjMufp9FBvkEN02I0Kv1I9eMfkaQCDY7zHgfQ-Mij71",
            "type": "internal",
            "value": 962109000n,
          },
        ],
      },
    ],
  },
]
`;

exports[`StablecoinMasterContract on repayBurn should send burn message to jetton 1`] = `
[
  {
    "$seq": 2,
    "events": [
      {
        "$type": "received",
        "message": {
          "body": {
            "cell": "x{B065C3AC800784F79BB9BDDE39E2B05A2820A591FBCD92F3ACC083685CD65E37ED00489A4B22C8215_}",
            "type": "cell",
          },
          "bounce": true,
          "from": "kQBqJ1A2wQ5MkOBlhdTr7ML850tmbmDecFDAEvNUwHvm0sGh",
          "to": "kQCvEGmk27vea3FYBdf6TiCp3U30vtq0p62qJHO0fGPgxIkv",
          "type": "internal",
          "value": 1000000000n,
        },
      },
      {
        "$type": "processed",
        "gasUsed": 19491n,
      },
      {
        "$type": "sent",
        "messages": [
          {
            "body": {
              "cell": "x{B065C3AC800784F79BB9BDDE39E2B05A2820A591FBCD92F3ACC083685CD65E37ED00489A4B22C8215_}",
              "type": "cell",
            },
            "bounce": false,
            "from": "kQCvEGmk27vea3FYBdf6TiCp3U30vtq0p62qJHO0fGPgxIkv",
            "to": "kQDIdzjMufp9FBvkEN02I0Kv1I9eMfkaQCDY7zHgfQ-Mij71",
            "type": "internal",
            "value": 979086000n,
          },
        ],
      },
    ],
  },
]
`;

exports[`StablecoinMasterContract on repayBurnNotification should send stablecoinBurned to user position 1`] = `
[
  {
    "$seq": 3,
    "events": [
      {
        "$type": "received",
        "message": {
          "body": {
            "cell": "x{8C5F4C71800784F79BB9BDDE39E2B05A2820A591FBCD92F3ACC083685CD65E37ED00489A4B22C8215_}",
            "type": "cell",
          },
          "bounce": true,
          "from": "kQCbJtY__64ruXlW7yhdMOa8y_YHO5HIIyKFXWvVWb58-ckR",
          "to": "kQCvEGmk27vea3FYBdf6TiCp3U30vtq0p62qJHO0fGPgxIkv",
          "type": "internal",
          "value": 1000000000n,
        },
      },
      {
        "$type": "failed",
        "errorCode": 4429,
        "errorMessage": "Invalid sender",
      },
      {
        "$type": "sent-bounced",
        "message": {
          "body": {
            "type": "empty",
          },
          "bounce": false,
          "from": "kQCvEGmk27vea3FYBdf6TiCp3U30vtq0p62qJHO0fGPgxIkv",
          "to": "kQCbJtY__64ruXlW7yhdMOa8y_YHO5HIIyKFXWvVWb58-ckR",
          "type": "internal",
          "value": 990460000n,
        },
      },
    ],
  },
]
`;

exports[`StablecoinMasterContract should deploy correctly, set init state and premint amount to owner wallet 1`] = `
[
  {
    "$seq": 0,
    "events": [
      {
        "$type": "deploy",
      },
      {
        "$type": "received",
        "message": {
          "body": {
            "cell": "x{01FB345B000000000000000000000000000000000000000000000000000000746A5288004_}",
            "type": "cell",
          },
          "bounce": true,
          "from": "kQAI-3FJVc_ywSuY4vq0bYrzR7S4Och4y7bTU_i5yLOB3A6P",
          "to": "kQAasLO_2xc6_cfOoccmU5-s13JSph3Ga85VBy0mBzgW4qbV",
          "type": "internal",
          "value": 1000000000n,
        },
      },
      {
        "$type": "processed",
        "gasUsed": 23821n,
      },
      {
        "$type": "sent",
        "messages": [
          {
            "body": {
              "cell": "x{178D451900000000000000005E8D4A510008003561677FB62E75FB8F9D438E4CA73F59AEE4A54C3B8CD79CAA0E5A4C0E702DC500023EDC525573FCB04AE638BEAD1B62BCD1ED2E0E721E32EDB4D4FE2E722CE07702_}",
              "type": "cell",
            },
            "bounce": false,
            "from": "kQAasLO_2xc6_cfOoccmU5-s13JSph3Ga85VBy0mBzgW4qbV",
            "to": "kQAcNvElz2dMtEP9esrAGOslGY8CrWfQLU1PaaZPmvHTPkvL",
            "type": "internal",
            "value": 951950000n,
          },
        ],
      },
    ],
  },
]
`;
